--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 </center>
 	
 <script src="script.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </body>
 </html>
